crates/printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__skip_include__skip_inline_fragment.snap
---
source: crates/printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

type Result = Schema.__SelectionSet<Schema.Query, {
  me: Schema.__SelectionSet<Schema.User, {
    id: Schema.ID;
    name: Schema.String;
    type: Schema.UserType;
    age?: never;
  }, {}>;
}, {}>;

type Variables = {};

declare const Query: TypedDocumentNode<Result, Variables>;

export { Query as default };


