crates/printer/src/operation_type_printer/tests/snapshots/nitrogql_printer__operation_type_printer__tests__skip_include__skip_variable.snap
---
source: crates/printer/src/operation_type_printer/tests/mod.rs
expression: printed
---
import type { TypedDocumentNode } from "@graphql-typed-document-node/core";
import type * as Schema from "";

type Result = Schema.__SelectionSet<Schema.__OperationOutput.Query, {
  me: Schema.__SelectionSet<Schema.__OperationOutput.User, {
    id: Schema.__OperationOutput.ID;
    name: Schema.__OperationOutput.String;
    type: Schema.__OperationOutput.UserType;
    age: Schema.__OperationOutput.Int | null;
  }, {}> | Schema.__SelectionSet<Schema.__OperationOutput.User, {
    id: Schema.__OperationOutput.ID;
    name: Schema.__OperationOutput.String;
    type: Schema.__OperationOutput.UserType;
    age?: never;
  }, {}>;
}, {}>;

type Variables = {
  readonly skip: Schema.__OperationInput.Boolean;
};

declare const Query: TypedDocumentNode<Result, Variables>;

export { Query as default };


